--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "RenderListWebPartStrings": "lib/webparts/renderList/loc/{locale}.js"
+    "RenderListWebPartStrings": "lib/webparts/renderList/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
